# SupernoteReview

./: .gitignore  .manta_state.json  .mcp.json  CLAUDE.md  FEATURE_SPEC-review.md  FEATURE_SPEC.md  INTEGRATION.md  README.md  agent_integration.py  build.sh  build_entry.py  main.py  manta-review.spec  pyproject.toml  sn-review.spec  test.md
.claude/commands/: done.md  review.md
src/manta/: converter.py  main.py  state.py
src/sn/: device.py  main.py  mcp_server.py  state.py
tests/: conftest.py  test_cli.py  test_converter.py  test_device.py  test_mcp_server.py  test_state.py
