[project]
name = "supernotereview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adbutils>=2.12.0",
    "click>=8.3.1",
    "pypandoc>=1.16.2",
    "weasyprint>=67.0",
]

[project.scripts]
sn-review = "sn.main:cli"
sn-done = "sn.main:done"
build-binary = "build_entry:cli" # Placeholder, actual build is via shell

[tool.uv]
package = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
